# alura_aiagent_workshop

./: .gitignore  README.md  main.py  pyproject.toml
eda/: class_101.ipynb  class_102.ipynb
src/theoffice/output_structures/: class_101.py
src/theoffice/utils/: io.py
